--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
     .container{
       width: 60%;
-      height: 50vh;
+      height: 50%;
       margin: 50px auto;
       text-align: center;
       background-color:rgb(241, 232, 232);
@@ -25,6 +25,7 @@
       border-radius: 8px;
       letter-spacing: 2px;
       margin-top: 3rem;
+      margin-bottom: 1rem;
     }
     #output-div{
       font-weight: bolder;
@@ -40,7 +41,8 @@
 
     <h1>Is your birthday lucky ?</h1>
     <hr />
-    enter date of birth:<input type="text" id="date"/> enter lucky number
+    enter date of birth:<input type="text" id="date"/><br>
+     enter lucky number
        <input type="text" id="lucky" />
     <div id="output-div"></div>
     <button onclick="isLucky();">submit</button>
