--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
     <h1>Is your birthday lucky ?</h1>
     <hr />
-    enter date of birth:<input type="text" id="date"/><br>
+    enter date of birth:<input type="date" id="date"/><br>
      enter lucky number
-       <input type="text" id="lucky" />
+       <input type="number" id="lucky" />
     <div id="output-div"></div>
-    <button onclick="isLucky();">submit</button>
+    <button id="button">submit</button>
     </div>
   </body>
   <script src="birth.js"></script>
