--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     h1{
       color: white;
       padding: 1rem;
+      margin: 1rem;
     }
     input{
       margin: 2rem;
@@ -66,7 +67,6 @@ li{
 
 header{
   width: 100%;
-  height: 15vh;
   background-color:tomato;
   text-align: center;
 }
